added most of the main pages

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 /*https://css-tricks.com/svg-use-with-external-reference-take-2/*/
 /*http://www.heropatterns.com/*/
 /*https://icomoon.io/app/#/select*/
+/*https://www.w3schools.com/html/html5_semantic_elements.asp*/
 :root {
   --color-background: #95BFDA;
   --color-scroll-btn: gray;
