--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,197 @@
-.App {
-  text-align: center;
+.app {
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+.outer-container {
+  position: fixed;
+  top: 0;
+  font-size: 1.6em;
+  width: 100%;
+  height: 100%;
+  background: white;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+
+.inner-container {
+  padding-top: 3em;
+  width: 100%;
+  position: fixed;
+  overflow: auto;
+  /*height: -webkit-calc(100vh - 9.5em);
+  height: calc(100vh - 3.5em);*/
+
 }
 
-.App-title {
-  font-size: 1.5em;
+.front-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding-top: 0;
 }
 
-.App-intro {
-  font-size: large;
+.op0 {
+    opacity: 0;
+    animation: 8s ease normal forwards fadeOut;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.top-spacing {
+  height: 11em;
+}
+
+
+
+.bottom-spacing:before {
+  content: "TEST HERE1"
+}
+
+.inner-padding {
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  padding-left: 2em;
+  padding-right: 2em;
+  /*box-sizing: border-box;*/
+}
+
+/*z-index*/
+.z10 {
+  z-index: 10;
+}
+
+.z20 {
+  z-index: 10;
+}
+
+.z110{
+  z-index: 110;
+}
+
+
+.z5{
+  /*z-index;*/
+}
+
+.slide-up {
+  animation:
+    move-up 1s ease;
+}
+
+
+
+@keyframes move-up {
+   0% { transform: translate(0, 100vh); opacity: 0; }
+  100% { transform: translate(0, 0); opacity: 1; }
+}
+
+
+
+.hide {
+  display: none;
+}
+
+/*secondary menu (page-specific menu)*/
+.menu {
+
+  margin-top: .2em;
+  z-index: 5;
+  width: 100%;
+  position: fixed;
+  bottom: 2.7em;
+  display: flex;
+}
+
+.menu a.space {
+  padding-left: 1em;
+}
+
+
+.slide-right {
+animation:
+  move-right 1s ease;
+}
+
+@keyframes move-right {
+ 0% { transform: translate(-100vh, 0); opacity: 0; }
+100% { transform: translate(0, 0); opacity: 1; }
+}
+
+.user-container {
+margin-top: .5em;
+width: 100%;
+display: flex;
+justify-content: center;
+background: white;
+}
+
+.user-image {
+width: 20%;
+text-align: center;
+}
+
+.round {
+width: 50%;
+border: 1px solid black;
+border-radius: 100%;
+padding: .1em;
+}
+
+.user-info h2 {
+margin: 0;
+}
+
+.z110 > .inner-container {
+margin-top: 0;
+height: 100%;
+width: 100%;
+overflow: scroll;
+}
+
+.menu-bar {
+width: 100%;
+border-bottom: 2px solid gray;
+}
+
+.menu-bar ul {
+width: 100%;
+padding: 0;
+margin: 0;
+display: flex;
+}
+
+.menu-bar li {
+width: 100%;
+background: white;
+font-size: 1em;
+text-decoration: none;
+color: gray;
+text-align: center;
+list-style: none;
+padding: .5em;
+}
+
+.menu-bar .selected {
+border-bottom: 5px solid green;
+color: green;
+}
+
+.content {
+width: 100%;
+/*height: calc(100vh - 12em);*/
+overflow: scroll;
+}
+
+.svg-guy {
+text-align: center;
+width: 100%;
+}
+
+
+.hidden-message {
+position: absolute;
+top: 5em;
+height: 200px;
+width: 100%;
 }
