--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 /*http://www.heropatterns.com/*/
 /*https://icomoon.io/app/#/select*/
 /*https://www.w3schools.com/html/html5_semantic_elements.asp*/
+/*https://github.com/airbnb/javascript/tree/master/react*/
+/*https://davidwalsh.name/function-debounce*/
+
+
 :root {
   --color-background: #95BFDA;
   --color-scroll-btn: gray;
