--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
 
 }
 
+.noTopPadding {
+  padding-top: 0;
+}
+
+
+
 .front-page {
   display: flex;
   justify-content: center;
@@ -41,7 +47,13 @@
   height: 11em;
 }
 
+.bottom-spacing {
+  height: 5.5em;
+}
 
+.noTopPadding .bottom-spacing {
+  height: 9em;
+}
 
 .bottom-spacing:before {
   content: "TEST HERE1"
@@ -51,8 +63,8 @@
   border: 1px solid black;
   width: 100%;
   height: 100%;
-  padding-left: 2em;
-  padding-right: 2em;
+  padding-left: 3%;
+  padding-right: 3%;
   /*box-sizing: border-box;*/
 }
 
@@ -80,13 +92,26 @@
 }
 
 
-
 @keyframes move-up {
    0% { transform: translate(0, 100vh); opacity: 0; }
   100% { transform: translate(0, 0); opacity: 1; }
 }
 
 
+.slide-out {
+  animation:
+    move-out 1s ease forwards;
+}
+
+@keyframes move-out {
+   0% { transform: translate(0, 0); opacity: 1; }
+  100% { transform: translate(0, 100vh); opacity: 0; }
+}
+
+
+.selected {
+  color: green;
+}
 
 .hide {
   display: none;
@@ -116,6 +141,16 @@ animation:
 @keyframes move-right {
  0% { transform: translate(-100vh, 0); opacity: 0; }
 100% { transform: translate(0, 0); opacity: 1; }
+}
+
+.slide-left {
+animation:
+  move-left 1s ease;
+}
+
+@keyframes move-left {
+ 0% { transform: translate(0, 0); opacity: 1; }
+100% { transform: translate(-100vh, 0); opacity: 0; }
 }
 
 .user-container {
