--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,15 @@
 /*https://www.w3schools.com/html/html5_semantic_elements.asp*/
 /*https://github.com/airbnb/javascript/tree/master/react*/
 /*https://davidwalsh.name/function-debounce*/
+/*https://medium.com/react-ecosystem/how-to-handle-state-in-react-6f2d3cd73a0c*/
+/*https://webdesign.tutsplus.com/articles/quick-tip-using-web-inspector-to-debug-mobile-safari--webdesign-8787*/
+/*https://github.com/reactjs/redux/issues/1709*/
+/*https://developer.mozilla.org/en-US/docs/Web/CSS/text-overflow*/
+/*https://developers.facebook.com/docs/sharing/web*/
+/*https://dev.twitter.com/web/tweet-button*/
 
+/*Questions*/
+/*helperFn.js -> how to bind this*/
 
 :root {
   --color-background: #95BFDA;
@@ -22,8 +30,6 @@ body {
   font-size: 62.5%;
   letter-spacing: 2px;
   /*background: var(--color-background);*/
-
-  background: vaxr(--color-background);
   /*background-color: #DFDBE5;
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox='0 0 12 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 .99C4 .445 4.444 0 5 0c.552 0 1 .45 1 .99v4.02C6 5.555 5.556 6 5 6c-.552 0-1-.45-1-.99V.99zm6 8c0-.546.444-.99 1-.99.552 0 1 .45 1 .99v4.02c0 .546-.444.99-1 .99-.552 0-1-.45-1-.99V8.99z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");*/
 
