--- a/src/Nav.css
+++ b/src/Nav.css
@@ -12,16 +12,16 @@ nav {
         padding: 0 .5em 0 .5em;
         margin: .2em;
         display: flex;
-        justify-content: space-between;
         list-style: none;
         font-size: 1em;
+        justify-content: space-around;
       }
 
      .navbar-items li {
         align-self: center;
       }
 
-      .navbar-items > li  img {
+      .navbar-items > li img {
         width: 1.9em;
         height: 1.9em;
         padding: .2em;
@@ -35,7 +35,23 @@ nav {
       }
 
 nav input {
-  width: 300px;
+  width: 100%;
   height: 30px;
-  font-size: 1.5em;
+  font-size: 1em;
+  border: 1px solid black;
+  border-radius: .5em;
+}
+
+.navbar-items button {
+  border: 1px solid black;
+  border-radius: 15%;
+  padding: .3em .5em .3em .5em;
+  width: 3em;
+  font-size: 1em;
+  margin-left: .2em;
+  margin-right: .2em;
+}
+
+.navbar-items.search li:nth-child(2) {
+  width: 80%;
 }
