--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,6 +17,7 @@
   width: 100%;
   position: fixed;
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
   /*height: -webkit-calc(100vh - 9.5em);
   height: calc(100vh - 3.5em);*/
 }
@@ -189,6 +190,7 @@ margin-top: 0;
 height: 100%;
 width: 100%;
 overflow: scroll;
+-webkit-overflow-scrolling: touch;
 }
 
 .menu-bar {
