--- a/src/css/App.css
+++ b/src/css/App.css
@@ -40,15 +40,21 @@
 }
 
 .loading {
-   opacity: 0;
-   text-align: center;
-   animation: 3s ease normal infinite pulse;
+  opacity: 0;
+  text-align: center;
+  animation: 3s ease normal infinite pulse;
 }
 
 @keyframes pulse {
-    0% { opacity: .1; }
-   50% { opacity: .7; }
-  100% { opacity: .1; }
+  0% {
+    opacity: 0.1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 0.1;
+  }
 }
 
 .top-spacing {
@@ -64,7 +70,7 @@
 }
 
 .bottom-spacing:before {
-  content: "TEST HERE1"
+  content: "TEST HERE1";
 }
 
 .inner-padding {
@@ -85,37 +91,43 @@
   z-index: 10;
 }
 
-.z110{
+.z110 {
   z-index: 110;
 }
 
-
-.z5{
+.z5 {
   /*z-index;*/
 }
 
 .slide-up {
-  animation:
-    move-up 1s ease;
+  animation: move-up 1s ease;
 }
-
 
 @keyframes move-up {
-   0% { transform: translate(0, 100vh); opacity: 0; }
-  100% { transform: translate(0, 0); opacity: 1; }
+  0% {
+    transform: translate(0, 100vh);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
 }
 
-
 .slide-out {
-  animation:
-    move-out 1s ease forwards;
+  animation: move-out 1s ease forwards;
 }
 
 @keyframes move-out {
-   0% { transform: translate(0, 0); opacity: 1; }
-  100% { transform: translate(0, 100vh); opacity: 0; }
+  0% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(0, 100vh);
+    opacity: 0;
+  }
 }
-
 
 .selected {
   color: green;
@@ -127,8 +139,7 @@
 
 /*secondary menu (page-specific menu)*/
 .menu {
-
-  margin-top: .2em;
+  margin-top: 0.2em;
   z-index: 5;
   width: 100%;
   position: fixed;
@@ -140,102 +151,110 @@
   padding-left: 1em;
 }
 
-
 .slide-right {
-animation:
-  move-right 1s ease;
+  animation: move-right 1s ease;
 }
 
 @keyframes move-right {
- 0% { transform: translate(-100vh, 0); opacity: 0; }
-100% { transform: translate(0, 0); opacity: 1; }
+  0% {
+    transform: translate(-100vh, 0);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
 }
 
 .slide-left {
-animation:
-  move-left 1s ease;
+  animation: move-left 1s ease;
 }
 
 @keyframes move-left {
- 0% { transform: translate(0, 0); opacity: 1; }
-100% { transform: translate(-100vh, 0); opacity: 0; }
+  0% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-100vh, 0);
+    opacity: 0;
+  }
 }
 
 .user-container {
-margin-top: .5em;
-width: 100%;
-display: flex;
-justify-content: center;
-background: white;
+  margin-top: 0.5em;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: white;
 }
 
 .user-image {
-width: 20%;
-text-align: center;
+  width: 20%;
+  text-align: center;
 }
 
 .round {
-width: 50%;
-border: 1px solid black;
-border-radius: 100%;
-padding: .1em;
+  width: 50%;
+  border: 1px solid black;
+  border-radius: 100%;
+  padding: 0.1em;
 }
 
 .user-info h2 {
-margin: 0;
+  margin: 0;
 }
 
 .z110 > .inner-container {
-margin-top: 0;
-height: 100%;
-width: 100%;
-overflow: scroll;
--webkit-overflow-scrolling: touch;
+  margin-top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .menu-bar {
-width: 100%;
-border-bottom: 2px solid gray;
+  width: 100%;
+  border-bottom: 2px solid gray;
 }
 
 .menu-bar ul {
-width: 100%;
-padding: 0;
-margin: 0;
-display: flex;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
 
 .menu-bar li {
-width: 100%;
-background: white;
-font-size: 1em;
-text-decoration: none;
-color: gray;
-text-align: center;
-list-style: none;
-padding: .5em;
+  width: 100%;
+  background: white;
+  font-size: 1em;
+  text-decoration: none;
+  color: gray;
+  text-align: center;
+  list-style: none;
+  padding: 0.5em;
 }
 
 .menu-bar .selected {
-border-bottom: 5px solid green;
-color: green;
+  border-bottom: 5px solid green;
+  color: green;
 }
 
 .content {
-width: 100%;
-/*height: calc(100vh - 12em);*/
-overflow: scroll;
+  width: 100%;
+  /*height: calc(100vh - 12em);*/
+  overflow: scroll;
 }
 
 .svg-guy {
-text-align: center;
-width: 100%;
+  text-align: center;
+  width: 100%;
 }
 
-
 .hidden-message {
-position: absolute;
-top: 5em;
-height: 200px;
-width: 100%;
+  position: absolute;
+  top: 5em;
+  height: 200px;
+  width: 100%;
 }
