--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,8 @@
 :root {
-  --color-background: #95BFDA;
+  --color-background: #95bfda;
   --color-scroll-btn: gray;
 }
-z
-html {
+z html {
   /*height: 100%;*/
   overflow: hidden;
 }
@@ -13,7 +12,6 @@ body {
   /*background: var(--color-background);*/
   /*background-color: #DFDBE5;
   background-image: url("data:image/svg+xml,%3Csvg width='12' height='16' viewBox='0 0 12 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 .99C4 .445 4.444 0 5 0c.552 0 1 .45 1 .99v4.02C6 5.555 5.556 6 5 6c-.552 0-1-.45-1-.99V.99zm6 8c0-.546.444-.99 1-.99.552 0 1 .45 1 .99v4.02c0 .546-.444.99-1 .99-.552 0-1-.45-1-.99V8.99z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");*/
-
 
   /*background-color: #fefdff;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%23fbdebc' fill-opacity='0.4'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");*/
@@ -36,5 +34,5 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 input {
-  padding-left: .5em;
+  padding-left: 0.5em;
 }
